crates/friction-cli/tests/snapshots/snapshot__check_json__docs_llm_0a0197006e9ca159.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
{
  "genre": "docs",
  "metrics": [
    {
      "name": "sentence_length_mean",
      "value": 9.226415094339623,
      "lo": 5.079601990049751,
      "hi": 11.36986301369863,
      "in_envelope": true
    },
    {
      "name": "sentence_length_stddev",
      "value": 7.170804300652942,
      "lo": 4.841157658992773,
      "hi": 9.53557474351129,
      "in_envelope": true
    },
    {
      "name": "sentence_length_cv",
      "value": 0.7772037381075785,
      "lo": 0.6938000297364706,
      "hi": 1.1063157464161906,
      "in_envelope": true
    },
    {
      "name": "discourse_marker_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 3.076923076923077,
      "in_envelope": true
    },
    {
      "name": "triad_rate",
      "value": 0.018867924528301886,
      "lo": 0.0,
      "hi": 0.030303030303030304,
      "in_envelope": true
    },
    {
      "name": "contraction_ratio",
      "value": 1.0,
      "lo": 0.0,
      "hi": 0.6666666666666666,
      "in_envelope": false
    },
    {
      "name": "bullet_parallelism",
      "value": 0.8055555555555557,
      "lo": 0.0,
      "hi": 1.0,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_mean",
      "value": 1.1521739130434783,
      "lo": 1.0970149253731343,
      "hi": 1.509433962264151,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_cv",
      "value": 0.3604711919725054,
      "lo": 0.28827503026587703,
      "hi": 0.7259662712736925,
      "in_envelope": true
    },
    {
      "name": "em_dash_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "semicolon_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 3.5335689045936394,
      "in_envelope": true
    },
    {
      "name": "participial_closer_rate",
      "value": 0.05660377358490566,
      "lo": 0.0,
      "hi": 0.018518518518518517,
      "in_envelope": false
    },
    {
      "name": "not_just_but_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "ritual_marker_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "llm_favored_phrase_rate",
      "value": 58.333333333333336,
      "lo": 0.0,
      "hi": 17.89709172259508,
      "in_envelope": false
    },
    {
      "name": "human_favored_phrase_rate",
      "value": 8.333333333333334,
      "lo": 12.599160055996267,
      "hi": 43.890865954922894,
      "in_envelope": false
    },
    {
      "name": "heading_density",
      "value": 12.5,
      "lo": 2.3094688221709005,
      "hi": 14.9812734082397,
      "in_envelope": true
    },
    {
      "name": "list_item_density",
      "value": 45.833333333333336,
      "lo": 0.0,
      "hi": 31.62486368593239,
      "in_envelope": false
    },
    {
      "name": "bold_span_density",
      "value": 14.583333333333334,
      "lo": 0.0,
      "hi": 14.176663031624864,
      "in_envelope": false
    },
    {
      "name": "sentence_opener_repeat_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.06557377049180328,
      "in_envelope": true
    },
    {
      "name": "top_opener_concentration",
      "value": 0.08333333333333333,
      "lo": 0.05454545454545454,
      "hi": 0.16129032258064516,
      "in_envelope": true
    }
  ],
  "spans": [
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2,
      "end": 56,
      "line": 1,
      "column": 3,
      "score": 31
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 60,
      "end": 487,
      "line": 3,
      "column": 1,
      "score": 2787
    },
    {
      "channel": "literal",
      "frame_id": "sub.is_crucial",
      "start": 261,
      "end": 271,
      "line": 3,
      "column": 202,
      "score": null
    },
    {
      "channel": "literal",
      "frame_id": "sub.this_guide_will_walk_you_through",
      "start": 273,
      "end": 305,
      "line": 3,
      "column": 214,
      "score": null
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 508,
      "end": 541,
      "line": 7,
      "column": 1,
      "score": 19
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 548,
      "end": 585,
      "line": 9,
      "column": 6,
      "score": 7
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 591,
      "end": 688,
      "line": 10,
      "column": 6,
      "score": 100
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 694,
      "end": 741,
      "line": 11,
      "column": 6,
      "score": 28
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 745,
      "end": 804,
      "line": 12,
      "column": 4,
      "score": 31
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 843,
      "end": 999,
      "line": 16,
      "column": 1,
      "score": 398
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1027,
      "end": 1079,
      "line": 19,
      "column": 4,
      "score": 34
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1110,
      "end": 1165,
      "line": 20,
      "column": 4,
      "score": 22
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1230,
      "end": 1327,
      "line": 26,
      "column": 4,
      "score": 125
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1364,
      "end": 1518,
      "line": 30,
      "column": 1,
      "score": 405
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1523,
      "end": 1588,
      "line": 32,
      "column": 4,
      "score": 86
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1660,
      "end": 1731,
      "line": 38,
      "column": 4,
      "score": 61
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2267,
      "end": 2305,
      "line": 57,
      "column": 78,
      "score": 12
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2309,
      "end": 2358,
      "line": 58,
      "column": 4,
      "score": 46
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2405,
      "end": 2432,
      "line": 60,
      "column": 4,
      "score": 7
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2545,
      "end": 2646,
      "line": 68,
      "column": 1,
      "score": 211
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2651,
      "end": 2684,
      "line": 70,
      "column": 4,
      "score": 15
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2727,
      "end": 2809,
      "line": 76,
      "column": 4,
      "score": 136
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2919,
      "end": 3013,
      "line": 82,
      "column": 4,
      "score": 215
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3052,
      "end": 3173,
      "line": 86,
      "column": 1,
      "score": 217
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3178,
      "end": 3226,
      "line": 88,
      "column": 4,
      "score": 21
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3319,
      "end": 3363,
      "line": 90,
      "column": 4,
      "score": 27
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3539,
      "end": 3577,
      "line": 96,
      "column": 33,
      "score": 17
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3605,
      "end": 3721,
      "line": 100,
      "column": 5,
      "score": 155
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3726,
      "end": 3866,
      "line": 101,
      "column": 5,
      "score": 280
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3871,
      "end": 3967,
      "line": 102,
      "column": 5,
      "score": 113
    },
    {
      "channel": "literal",
      "frame_id": "span.by_following_these_steps_leading",
      "start": 3969,
      "end": 3995,
      "line": 104,
      "column": 1,
      "score": null
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3969,
      "end": 4219,
      "line": 104,
      "column": 1,
      "score": 882
    }
  ],
  "tell_counts": {
    "dms": 29,
    "span": 1,
    "sub": 2
  },
  "dms": {
    "mean_machine": 14.34423076923077,
    "mean_human": 1.7096153846153845,
    "differential": 12.634615384615385,
    "token_count": 520
  }
}
