crates/friction-cli/tests/snapshots/snapshot__check_json__email_llm_062a9d6f268e8994.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
{
  "genre": "email",
  "family": "qwen",
  "metrics": [
    {
      "name": "sentence_length_mean",
      "value": 14.23913043478261,
      "lo": 3.7147335423197494,
      "hi": 8.367768595041323,
      "in_envelope": false
    },
    {
      "name": "sentence_length_stddev",
      "value": 7.813546716270058,
      "lo": 3.842935444251814,
      "hi": 8.561427697392949,
      "in_envelope": true
    },
    {
      "name": "sentence_length_cv",
      "value": 0.5487376319823246,
      "lo": 0.8694236413682912,
      "hi": 1.1404753291323981,
      "in_envelope": false
    },
    {
      "name": "discourse_marker_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "triad_rate",
      "value": 0.10869565217391304,
      "lo": 0.0,
      "hi": 0.01694915254237288,
      "in_envelope": false
    },
    {
      "name": "contraction_ratio",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.5714285714285714,
      "in_envelope": true
    },
    {
      "name": "bullet_parallelism",
      "value": 1.0,
      "lo": 0.6319659442724458,
      "hi": 0.8533057851239669,
      "in_envelope": false
    },
    {
      "name": "paragraph_shape_mean",
      "value": 1.84,
      "lo": 1.0925925925925926,
      "hi": 1.2222222222222223,
      "in_envelope": false
    },
    {
      "name": "paragraph_shape_cv",
      "value": 0.5253498249388945,
      "lo": 0.28767186522288957,
      "hi": 0.4872634148780704,
      "in_envelope": false
    },
    {
      "name": "em_dash_density",
      "value": 1.5267175572519085,
      "lo": 0.0,
      "hi": 1.2285012285012284,
      "in_envelope": false
    },
    {
      "name": "semicolon_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 1.6207455429497568,
      "in_envelope": true
    },
    {
      "name": "participial_closer_rate",
      "value": 0.08695652173913043,
      "lo": 0.0,
      "hi": 0.00641025641025641,
      "in_envelope": false
    },
    {
      "name": "not_just_but_rate",
      "value": 0.021739130434782608,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": false
    },
    {
      "name": "ritual_marker_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "llm_favored_phrase_rate",
      "value": 33.6906584992343,
      "lo": 3.592814371257485,
      "hi": 14.895729890764647,
      "in_envelope": false
    },
    {
      "name": "human_favored_phrase_rate",
      "value": 6.1255742725880555,
      "lo": 10.121457489878543,
      "hi": 27.753686036426714,
      "in_envelope": false
    },
    {
      "name": "heading_density",
      "value": 0.0,
      "lo": 5.758157389635317,
      "hi": 19.161676646706585,
      "in_envelope": false
    },
    {
      "name": "list_item_density",
      "value": 4.594180704441041,
      "lo": 12.258064516129032,
      "hi": 80.2919708029197,
      "in_envelope": false
    },
    {
      "name": "bold_span_density",
      "value": 12.251148545176111,
      "lo": 0.0,
      "hi": 6.451612903225806,
      "in_envelope": false
    },
    {
      "name": "sentence_opener_repeat_rate",
      "value": 0.0,
      "lo": 0.0038022813688212928,
      "hi": 0.04477611940298507,
      "in_envelope": false
    },
    {
      "name": "top_opener_concentration",
      "value": 0.08695652173913043,
      "lo": 0.04854368932038835,
      "hi": 0.17391304347826086,
      "in_envelope": true
    }
  ],
  "spans": [
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 0,
      "end": 78,
      "line": 1,
      "column": 1,
      "score": 44
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 98,
      "end": 501,
      "line": 5,
      "column": 1,
      "score": 2720
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 534,
      "end": 892,
      "line": 9,
      "column": 1,
      "score": 1746
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 894,
      "end": 1341,
      "line": 11,
      "column": 1,
      "score": 3600
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1345,
      "end": 1376,
      "line": 13,
      "column": 3,
      "score": 8
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1380,
      "end": 1849,
      "line": 15,
      "column": 1,
      "score": 2980
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1851,
      "end": 2245,
      "line": 17,
      "column": 1,
      "score": 2054
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2249,
      "end": 2299,
      "line": 19,
      "column": 3,
      "score": 19
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2303,
      "end": 2657,
      "line": 21,
      "column": 1,
      "score": 2163
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2659,
      "end": 3061,
      "line": 23,
      "column": 1,
      "score": 1991
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3065,
      "end": 3097,
      "line": 25,
      "column": 3,
      "score": 6
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3101,
      "end": 3171,
      "line": 27,
      "column": 1,
      "score": 76
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3217,
      "end": 3349,
      "line": 30,
      "column": 3,
      "score": 284
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3357,
      "end": 3391,
      "line": 32,
      "column": 5,
      "score": 7
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3396,
      "end": 3531,
      "line": 33,
      "column": 3,
      "score": 315
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3537,
      "end": 3569,
      "line": 35,
      "column": 5,
      "score": 11
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3574,
      "end": 3730,
      "line": 36,
      "column": 3,
      "score": 381
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3732,
      "end": 3918,
      "line": 38,
      "column": 1,
      "score": 389
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3942,
      "end": 4189,
      "line": 42,
      "column": 1,
      "score": 1041
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 4206,
      "end": 4255,
      "line": 46,
      "column": 2,
      "score": 18
    }
  ],
  "tell_counts": {
    "dms": 20
  },
  "dms": {
    "mean_machine": 28.951724137931034,
    "mean_human": 1.48,
    "differential": 27.471724137931034,
    "token_count": 725
  }
}
