crates/friction-cli/tests/snapshots/snapshot__check_json__email_llm_29ff22ba7de18cf6.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
{
  "genre": "email",
  "family": "qwen",
  "metrics": [
    {
      "name": "sentence_length_mean",
      "value": 14.594594594594595,
      "lo": 3.7147335423197494,
      "hi": 8.367768595041323,
      "in_envelope": false
    },
    {
      "name": "sentence_length_stddev",
      "value": 8.814789352113467,
      "lo": 3.842935444251814,
      "hi": 8.561427697392949,
      "in_envelope": false
    },
    {
      "name": "sentence_length_cv",
      "value": 0.6039763074596264,
      "lo": 0.8694236413682912,
      "hi": 1.1404753291323981,
      "in_envelope": false
    },
    {
      "name": "discourse_marker_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "triad_rate",
      "value": 0.05405405405405406,
      "lo": 0.0,
      "hi": 0.01694915254237288,
      "in_envelope": false
    },
    {
      "name": "contraction_ratio",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.5714285714285714,
      "in_envelope": true
    },
    {
      "name": "bullet_parallelism",
      "value": 0.0,
      "lo": 0.6319659442724458,
      "hi": 0.8533057851239669,
      "in_envelope": false
    },
    {
      "name": "paragraph_shape_mean",
      "value": 1.85,
      "lo": 1.0925925925925926,
      "hi": 1.2222222222222223,
      "in_envelope": false
    },
    {
      "name": "paragraph_shape_cv",
      "value": 0.39259024449551216,
      "lo": 0.28767186522288957,
      "hi": 0.4872634148780704,
      "in_envelope": true
    },
    {
      "name": "em_dash_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 1.2285012285012284,
      "in_envelope": true
    },
    {
      "name": "semicolon_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 1.6207455429497568,
      "in_envelope": true
    },
    {
      "name": "participial_closer_rate",
      "value": 0.02702702702702703,
      "lo": 0.0,
      "hi": 0.00641025641025641,
      "in_envelope": false
    },
    {
      "name": "not_just_but_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "ritual_marker_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "llm_favored_phrase_rate",
      "value": 65.17690875232775,
      "lo": 3.592814371257485,
      "hi": 14.895729890764647,
      "in_envelope": false
    },
    {
      "name": "human_favored_phrase_rate",
      "value": 9.31098696461825,
      "lo": 10.121457489878543,
      "hi": 27.753686036426714,
      "in_envelope": false
    },
    {
      "name": "heading_density",
      "value": 0.0,
      "lo": 5.758157389635317,
      "hi": 19.161676646706585,
      "in_envelope": false
    },
    {
      "name": "list_item_density",
      "value": 0.0,
      "lo": 12.258064516129032,
      "hi": 80.2919708029197,
      "in_envelope": false
    },
    {
      "name": "bold_span_density",
      "value": 29.7951582867784,
      "lo": 0.0,
      "hi": 6.451612903225806,
      "in_envelope": false
    },
    {
      "name": "sentence_opener_repeat_rate",
      "value": 0.0,
      "lo": 0.0038022813688212928,
      "hi": 0.04477611940298507,
      "in_envelope": false
    },
    {
      "name": "top_opener_concentration",
      "value": 0.09090909090909091,
      "lo": 0.04854368932038835,
      "hi": 0.17391304347826086,
      "in_envelope": true
    }
  ],
  "spans": [
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2,
      "end": 61,
      "line": 1,
      "column": 3,
      "score": 31
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 90,
      "end": 375,
      "line": 5,
      "column": 1,
      "score": 1248
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 380,
      "end": 412,
      "line": 7,
      "column": 4,
      "score": 7
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 416,
      "end": 819,
      "line": 9,
      "column": 1,
      "score": 2582
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 824,
      "end": 872,
      "line": 11,
      "column": 4,
      "score": 21
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 876,
      "end": 1259,
      "line": 13,
      "column": 1,
      "score": 1864
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1261,
      "end": 1600,
      "line": 15,
      "column": 1,
      "score": 1469
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1605,
      "end": 1644,
      "line": 17,
      "column": 4,
      "score": 7
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1648,
      "end": 2050,
      "line": 19,
      "column": 1,
      "score": 1971
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2052,
      "end": 2215,
      "line": 21,
      "column": 1,
      "score": 505
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2220,
      "end": 2268,
      "line": 23,
      "column": 4,
      "score": 27
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2272,
      "end": 2557,
      "line": 25,
      "column": 1,
      "score": 1397
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2559,
      "end": 2824,
      "line": 27,
      "column": 1,
      "score": 1203
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2858,
      "end": 3132,
      "line": 31,
      "column": 1,
      "score": 1108
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3134,
      "end": 3176,
      "line": 33,
      "column": 1,
      "score": 14
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3196,
      "end": 3294,
      "line": 37,
      "column": 4,
      "score": 60
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3306,
      "end": 3493,
      "line": 45,
      "column": 3,
      "score": 538
    }
  ],
  "tell_counts": {
    "dms": 17
  },
  "dms": {
    "mean_machine": 25.446880269814503,
    "mean_human": 1.6593591905564924,
    "differential": 23.78752107925801,
    "token_count": 593
  }
}
